--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
     <div class="container">
         <div class="main-content">
             <div class="registration-box">
-                <h2>Cadastro (Limite: 50 pessoas)</h2>
+                <h2>Cadastro (dos nossos amigos da TVVALENAREDE)</h2>
                 <form id="registrationForm">
                     <input type="text" placeholder="Nome" required>
                     <input type="email" placeholder="E-mail" required>
@@ -108,26 +108,7 @@
             <div class="chat-box" id="chatBox"></div>
             <input type="text" placeholder="Digite sua mensagem" id="messageInput">
             <button onclick="sendMessage()">Enviar</button>
-        </div>
-
-        <div class="side-buttons">
-            <button class="side-button">1 MADE CENTER</button>
-            <button class="side-button">2 J.E.C.S</button>
-            <button class="side-button">3 BAR DO OSMAR</button>
-            <button class="side-button">4 SERGUIS ALIANÇAS</button>
-            <button class="side-button">5 SERGINHOS PNEUS</button>
-            <button class="side-button">6 CASA 3 IRMÃOS</button>
-            <button class="side-button">7 CASA DO NORDESTINO</button>
-            <button class="side-button">8 FUTEBOL AO VIVO</button>
-            <button class="side-button">9 ARQUIVO TVVALENAREDE</button>
-            <button class="side-button">10 VÍDEOS REELS</button>
-            <button class="side-button">11 FACEBOOK</button>
-            <button class="side-button">12 INSTAGRAM</button>
-            <button class="side-button">13 WHATSAPP</button>
-            <button class="side-button">14 YOUTUBE</button>
-        </div>
-    </div>
-
+      
     <script>
         let users = [];
         
@@ -156,41 +137,6 @@
     </script>
 </body>
 </html>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 <!DOCTYPE html>
 <html lang="pt-br">
