--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<form action="https://formsubmit.co/seu-tvbonani@gmail.com" method="POST">
+<form action="https://formsubmit.co/tvbonani@gmail.com" method="POST">
     <label for="nome">Nome:</label>
     <input type="text" id="nome" name="name" required>
     
