--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
+
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>TVR Brazil - Soluções Jurídicas</title>
+    <title>J.E.C.S Advogados Associados - Soluções Jurídicas</title>
     <style>
         * {
             margin: 0;
@@ -485,7 +486,7 @@ ul.form-section {  padding: 0px 38px;
 <body>
     <header class="main-header">
         <img src="https://github.com/tvvalenarede/parte1/raw/main/fotologotipo1.png" alt="TVR Brazil" class="header-logo">
-        <h1>TVR BRAZIL</h1>
+        <h1>J.E.C.S Advogados Associados</h1>
         <p class="header-tagline">Soluções Jurídicas com Excelência e Compromisso</p>
     </header>
 
@@ -582,8 +583,8 @@ ul.form-section {  padding: 0px 38px;
     </section>
 
 <section class="contact" id="contact">
-  <h2>E</h2>
-  <h2>ntre em Contato</h2>
+  <h2></h2>
+  <h2>Entre em Contato</h2>
     </section>
 
     <footer>
@@ -601,8 +602,8 @@ ul.form-section {  padding: 0px 38px;
             <a href="#"><i class="fab fa-whatsapp"></i></a>
         </div>
         
-        <p>TVR Brazil Advogados Associados</p>
-        <p>© 2023 Todos os direitos reservados</p>
+        <p>TVVALENAREDE.COM.BR - André Luiz Bonani e mail tvbonani@gmail.com</p>
+        <p>© 2025 Todos os direitos reservados</p>
     </footer>
 
     <script>
