--- a/index.html
+++ b/index.html
@@ -688,7 +688,7 @@
             </div>
             
             <div class="copyright">
-                <p>&copy; 2023 Pimenta Elétrica de Taubaté - Todos os direitos reservados</p>
+                <p>&copy; 2025 Pimenta Elétrica de Taubaté - Todos os direitos reservados TVVALENAREDE CONTATO 12-99769-0407</p>
             </div>
         </div>
     </footer>
