--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
       <div class="overlay">
         <div class="left">
           <h1>Novo endereço em Taubaté</h1>
-          <p>Fenícia Eletrônicos de Taubaté — Assistência técnica, peças e acessórios. Rua Dona Chiquinha de Mattos, 311 - Centro.</p>
+          <p>Fenícia Eletrônicos de Taubaté — Vendas de aparelhos celulares,assistência técnica, peças e acessórios e também vendemos perfumes Árabes, End: Rua Dona Chiquinha de Mattos, 311 - Centro.</p>
           <div class="cta">
             <a href="mailto:fenicia.info@gmail.com">Peça seu orçamento</a>
             <a href="https://api.whatsapp.com/send?phone=5512993653636" style="background:transparent; color:white; border:2px solid rgba(255,255,255,0.18);">WhatsApp</a>
