--- a/index.html
+++ b/index.html
@@ -154,9 +154,11 @@
         <div>
           <strong>Atendimento</strong>
           <ul style="padding-left:18px; margin:8px 0 0 0">
+              <li>Vendas de aparelhos celulares</li>
             <li>Assistência técnica para celulares</li>
             <li>Peças e componentes</li>
             <li>Venda de acessórios</li>
+               <li>Venda de perfumes Árabes</li>
           </ul>
         </div>
         <div>
@@ -165,7 +167,7 @@
         </div>
       </div>
 
-      <div style="margin-top:18px; font-size:13px; color:#9fb8db">&copy; 2025 Fenícia Eletrônicos. Desenvolvido para marketing e apresentação.</div>
+      <div style="margin-top:18px; font-size:13px; color:#9fb8db">&copy; 2025 Fenícia Eletrônicos. Desenvolvido pela TVVALENAREDE e apresentação.</div>
     </div>
   </footer>
 
