--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
         <img src="fenicia555.jpg" alt="Fenícia Eletrônicos fachada">
         <div>
           <div style="font-weight:700">Fenícia Eletrônicos</div>
-          <small style="color:#666">Assistência & Loja - Taubaté</small>
+          <small style="color:#666">Vendas de Celulares assistência & Loja - Taubaté</small>
         </div>
       </div>
       <div class="search">
