--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
   <header>
     <div class="container topbar">
       <div class="logo">
-        <img src="fenicialogo.jpg" alt="Fenícia Eletrônicos fachada">
+        <img src="fenicialogo1.jpg" alt="Fenícia Eletrônicos fachada">
         <div>
           <div style="font-weight:700">Fenícia Eletrônicos</div>
           <small style="color:#666">Vendas de Celulares - ASSISTÊNCIA</small>
