--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
           <strong>Fenícia Eletrônicos</strong>
           <div style="margin-top:6px">Rua Dona Chiquinha de Mattos, 311 - Centro, Taubaté - SP</div>
           <div style="margin-top:6px">Email: <a class="footer-link" href="mailto:fenicia.info@gmail.com">fenicia.info@gmail.com</a></div>
-          <div style="margin-top:6px">WhatsApp: (12) 99636-3636</div>
+          <div style="margin-top:6px">WhatsApp: (12) 99636-3636 e Tel 12-3635-5777</div>
         </div>
         <div>
           <strong>Atendimento</strong>
