--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
       <h2 style="margin:6px 0">Produtos em destaque</h2>
       <div class="grid">
         <div class="card">
-          <img src="fenicia22.jpg" alt="produto 1">
+          <img src="foto1.jpg" alt="produto 1">
           <div style="margin-top:6px">Kit com 3 Películas de Vidro para Lente</div>
           <div class="price">R$ 14,90</div>
         </div>
