--- a/index.html
+++ b/index.html
@@ -112,17 +112,17 @@
           <div class="price">R$ 14,90</div>
         </div>
         <div class="card">
-          <img src="fenicia22.jpg" alt="produto 2">
+          <img src="foto2.jpg" alt="produto 2">
           <div style="margin-top:6px">Tela Display LG</div>
           <div class="price">Produto indisponível</div>
         </div>
         <div class="card">
-          <img src="fenicia22.jpg" alt="produto 3">
+          <img src="foto3.jpg" alt="produto 3">
           <div style="margin-top:6px">Power Bank 20000 mAh</div>
           <div class="price">R$ 119,90</div>
         </div>
         <div class="card">
-          <img src="fenicia22.jpg" alt="produto 4">
+          <img src="foto4.jpg" alt="produto 4">
           <div style="margin-top:6px">Caixa de Som BomBox</div>
           <div class="price">R$ 89,90</div>
         </div>
@@ -133,10 +133,10 @@
       <h2 style="margin:6px 0">Galeria</h2>
       <p>Imagens do catálogo e produtos — role em dispositivos móveis.</p>
       <div class="gallery">
-        <img src="fenicia22.jpg" alt="galeria 1">
-        <img src="fenicia22.jpg" alt="galeria 2">
-        <img src="fenicia22.jpg" alt="galeria 3">
-        <img src="fenicia22.jpg" alt="galeria 4">
+        <img src="foto5.jpg" alt="galeria 1">
+        <img src="foto6.jpg" alt="galeria 2">
+        <img src="foto7.jpg" alt="galeria 3">
+        <img src="foto8.jpg" alt="galeria 4">
       </div>
     </section>
 
