--- a/index.html
+++ b/index.html
@@ -131,8 +131,8 @@
       <div class="grid">
         <div class="card" data-image="fe1.jpg">
           <img src="fe1.jpg" alt="Kit com 3 Películas de Vidro para Lente">
-          <div style="margin-top:6px">Kit com 3 Películas de Vidro para Lente</div>
-          <div class="price">R$ 14,90</div>
+          <div style="margin-top:6px">DELILAH Perfume Árabe</div>
+          <div class="price">A Conversar</div>
         </div>
         <div class="card" data-image="fe2.jpg">
           <img src="fe2.jpg" alt="Tela Display LG">
