--- a/index.html
+++ b/index.html
@@ -136,8 +136,8 @@
         </div>
         <div class="card" data-image="fe2.jpg">
           <img src="fe2.jpg" alt="Tela Display LG">
-          <div style="margin-top:6px">Tela Display LG</div>
-          <div class="price">Produto indisponível</div>
+          <div style="margin-top:6px">LATTAFA- HAYA </div>
+          <div class="price">A Conversar</div>
         </div>
         <div class="card" data-image="fe3.jpg">
           <img src="fe3.jpg" alt="Power Bank 20000 mAh">
