--- a/index.html
+++ b/index.html
@@ -141,8 +141,8 @@
         </div>
         <div class="card" data-image="fe3.jpg">
           <img src="fe3.jpg" alt="Power Bank 20000 mAh">
-          <div style="margin-top:6px">Power Bank 20000 mAh</div>
-          <div class="price">R$ 119,90</div>
+          <div style="margin-top:6px">IPHONE</div>
+          <div class="price">A Conversar</div>
         </div>
         <div class="card" data-image="fe4.jpg">
           <img src="fe4.jpg" alt="Caixa de Som BomBox">
