--- a/index.html
+++ b/index.html
@@ -146,8 +146,8 @@
         </div>
         <div class="card" data-image="fe4.jpg">
           <img src="fe4.jpg" alt="Caixa de Som BomBox">
-          <div style="margin-top:6px">Caixa de Som BomBox</div>
-          <div class="price">R$ 89,90</div>
+          <div style="margin-top:6px">CAPAS DE VÁRIAS CORES</div>
+          <div class="price">A Conversar</div>
         </div>
       </div>
     </section>
